@@ -1,0 +1,7 @@
+#ifndef DLI15B_H
+#define DLI15B_H
+
+void dli15b(void);
+extern unsigned char *dli15b_load_arg;
+
+#endif // DLI15_H
