@@ -1,7 +1,7 @@
 #ifndef DLISTS_H
 #define DLISTS_H
 
-void dlist_setup(unsigned char antic_mode, unsigned char text_line);
+void dlist_setup(unsigned char antic_mode, unsigned char text_line, unsigned char top_scanline_dli);
 void dlist_setup_rgb(unsigned char antic_mode, unsigned char text_line);
 void dlist_setup_apac(void);
 
