@@ -9,7 +9,7 @@
   using the HTTP transport.
 
   By Bill Kendrick <bill@newbreedsoftware.com>
-  2021-03-27 - 2021-05-27
+  2021-03-27 - 2021-06-05
 */
 
 #include <stdio.h>
@@ -42,7 +42,7 @@ char url[255];
 void fetch_image(unsigned char choice, char sample, int size, unsigned char pick_yr, unsigned pick_mo, unsigned pick_day) {
   unsigned short data_len, data_read;
   char * txt_buf;
-  unsigned char i;
+  int i;
 
   txt_buf = (unsigned char *) (txt_mem + 40);
 
@@ -58,12 +58,10 @@ void fetch_image(unsigned char choice, char sample, int size, unsigned char pick
   if (size == 7680) {
     /* Single screen image to load */
     nread(1, scr_mem1, (unsigned short) size);
-  } else if (size == 8448) {
+  } else if (size == (40 + 4) * 192) {
     /* Single screen with color palette for every scanline */
-    for (i = 0; i < 192; i++) {
-      nread(1, scr_mem1 + (i * 40), 40);
-      nread(1, rgb_table[i * 4], 4);
-    }
+    nread(1, scr_mem1, 7680);
+    nread(1, rgb_table, 768);
   } else {
     /* Multiple screen images to load... */
 
@@ -119,6 +117,7 @@ void fetch_image(unsigned char choice, char sample, int size, unsigned char pick
   }
 
   if (choice == CHOICE_MEDRES_COLOR) {
+    /* This mode gets color palette at the end */
     nread(1, (char *) 712, 1);
     nread(1, (char *) 708, 3);
   }
