@@ -1,9 +1,11 @@
 apod (Astronomy Picture of the Day) Client for #FujiNet
 Change Log
 
- * 2021-06-04
+ * 2021-06-05
    + Split colorbars into a test version of the APOD app,
      so the main app has a little more breathing room.
+   + New viewing mode: medium resolution (160x192) with
+     4 colors per scanline (no flickering).
 
  * 2021-05-27
    + Speak the title of the image.  (Press [V])
